# ccbridge

./: .SRCINFO  .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  ccbridge.install  index.html
.github/workflows/: ci.yml  release.yml
apt/: ccbridge.asc
apt/conf/: distributions
apt/db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
apt/dists/beta/: InRelease  Release  Release.gpg
apt/dists/beta/main/binary-amd64/: Packages  Release
apt/dists/beta/main/binary-arm64/: Packages  Release
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages  Release
apt/dists/stable/main/binary-arm64/: Packages  Release
apt/pool/main/c/ccbridge/: ccbridge_0.1.3_amd64.deb  ccbridge_0.1.3_arm64.deb  ccbridge_0.1.3~beta.20260523.82d0ee9_amd64.deb  ccbridge_0.1.3~beta.20260523.82d0ee9_arm64.deb
contrib/systemd/: ccbridge.service
crates/ccbridge-hook/: Cargo.toml
crates/ccbridge-hook/src/: main.rs
crates/ccbridge-hook/tests/: hook_passthrough.rs
crates/ccbridge-proto/: Cargo.toml
crates/ccbridge-proto/src/: buddy.rs  ctrl.rs  hook.rs  lib.rs
crates/ccbridged/: Cargo.toml
crates/ccbridged/src/: config.rs  lib.rs  main.rs  setup.rs  util.rs
crates/ccbridged/src/emit/: ble.rs  ctrl.rs  http.rs  mod.rs  notify.rs  swaync.rs
crates/ccbridged/src/emit/ble/: discovery.rs  mod.rs  session.rs
crates/ccbridged/src/ingest/: hooks.rs  jsonl.rs  mod.rs
crates/ccbridged/src/ingest/jsonl/: dates.rs  midnight.rs  mod.rs  offsets.rs  parse.rs  reset.rs  tokens.rs  watcher.rs
crates/ccbridged/src/permission/: additions.rs  allowlist.rs  cache.rs  mod.rs  pattern.rs  project.rs
crates/ccbridged/src/permission/additions/: audit_log.rs  derive.rs  mod.rs  target.rs  undo.rs  write.rs
crates/ccbridged/src/state/: mod.rs
crates/ccbridged/tests/: config_e2e.rs  ctrl_socket.rs  full_flow.rs  hook_ingest.rs  http_status.rs  jsonl_watcher.rs  undo_cli.rs
debian/maintainer-scripts/: postinst  prerm
docs/: debian-packaging.md  example-config.toml
