[workspace]
members = [
    "crates/ccbridge-proto",
    "crates/ccbridged",
    "crates/ccbridge-hook",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Marko Bocevski"]
license = "MIT"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# errors
anyhow = "1"
thiserror = "2"

# internal
ccbridge-proto = { path = "crates/ccbridge-proto" }
