[package]
name = "ccbridge-hook"
description = "Tiny Claude Code hook shim — pipes hook stdin/stdout through the daemon socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ccbridge-hook"
path = "src/main.rs"

[dependencies]
# Pure std — no external dependencies.  Keeps the binary small (<500 KB
# stripped) and cold-start fast (<5 ms).  No tokio: synchronous I/O is
# sufficient for a short-lived shim.

[dev-dependencies]
tempfile = "3"
