[package]
name = "ccbridge-hook"
description = "Tiny Claude Code hook shim — pipes hook stdin/stdout through the daemon socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ccbridge-hook"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
tempfile = "3"
