[package]
name = "ccbridge-proto"
description = "Shared serde types for ccbridge: hook events, BLE wire format, control protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
