[package]
name = "ccbridge-proto"
description = "Shared serde types for ccbridge: hook events, BLE wire format, control protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["alloc", "serde/std", "serde_json/std"]
alloc = ["serde/alloc", "serde_json/alloc"]

[dependencies]
# Direct deps (not workspace-inherited) so we can opt out of std for firmware.
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
