[package]
name = "ccbridged"
description = "Claude Code aggregator bridge daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ccbridged"
path = "src/lib.rs"

[[bin]]
name = "ccbridged"
path = "src/main.rs"

# Feature flags
# -------------
# ble  — BlueZ/bluer NUS peripheral emitter.  Enabled by default; Pixelbook
#         builds pass --no-default-features because no BLE controller is exposed
#         through Sommelier.  All other emit paths (swaync, ctrl, http) are
#         always-on and do not require a feature flag.
[features]
default = ["ble"]
ble = []

[dependencies]
ccbridge-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# DBus session-bus client for swaync notifications (tokio feature; default drops smol/async-io)
zbus = { version = "5", default-features = false, features = ["tokio"] }
# StreamExt for zbus signal streams (already a transitive dep via zbus/futures-lite)
futures-lite = "2"
# JSONL tail filesystem watcher (daemon-specific, not shared via workspace)
notify = "6"
# Glob matching for permission patterns (e.g. Read(**/.env*))
globset = "0.4"
# Local time for daily reset (daemon-specific)
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
# Signal Type=notify readiness to systemd. Tiny crate, no transitives.
sd-notify = "0.4"

[dev-dependencies]
tempfile = "3"
