[package]
name = "ccbridged"
description = "Claude Code aggregator bridge daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ccbridged"
path = "src/lib.rs"

[[bin]]
name = "ccbridged"
path = "src/main.rs"

# Feature flags
# -------------
# ble  — BlueZ/bluer NUS peripheral emitter.  Enabled by default; Pixelbook
#         builds pass --no-default-features because no BLE controller is exposed
#         through Sommelier.  All other emit paths (swaync, ctrl, http) are
#         always-on and do not require a feature flag.
[features]
default = ["ble"]
ble = []

[dependencies]
ccbridge-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
# DBus session-bus client for swaync notifications (tokio feature; default drops smol/async-io)
zbus = { version = "5", default-features = false, features = ["tokio"] }
# StreamExt for zbus signal streams (already a transitive dep via zbus/futures-lite)
futures-lite = "2"
# JSONL tail filesystem watcher (daemon-specific, not shared via workspace)
notify = "6"
# Glob matching for permission patterns (e.g. Read(**/.env*))
globset = "0.4"
# Lock-free shared allowlist — Phase 2b hot-reload
arc-swap = "1"
# Local time for daily reset (daemon-specific)
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
# Signal Type=notify readiness to systemd. Tiny crate, no transitives.
sd-notify = "0.4"
# TOML config file parser
toml = "0.8"
# HTTP /status endpoint for waybar custom modules
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"

[dev-dependencies]
tempfile = "3"

# ---------------------------------------------------------------------------
# Debian packaging (cargo-deb)
# ---------------------------------------------------------------------------
# Build command (no-build assumes `cargo build --release --workspace --locked`
# has already run):
#
#   cargo install cargo-deb
#   cargo build --release --workspace --locked
#   cargo deb -p ccbridged --target x86_64-unknown-linux-gnu --no-build
#
# Output: target/x86_64-unknown-linux-gnu/debian/ccbridge_<version>_amd64.deb
#
# Asset paths are relative to this crate root (crates/ccbridged/).
# ../../ resolves to the workspace/repo root.

[package.metadata.deb]
name = "ccbridge"
maintainer = "Marko Bocevski <marko.bocevski@gmail.com>"
copyright = "2026, Marko Bocevski <marko.bocevski@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """
ccbridge aggregates state across all running Claude Code sessions on this
machine and surfaces approval prompts via freedesktop notifications (swaync,
mako, dunst, GNOME, KDE) and a bidirectional control socket."""
section = "utils"
priority = "optional"
depends = "$auto, libc6, libsystemd0"
recommends = "swaync | mako-notifier | dunst | notification-daemon"
maintainer-scripts = "../../debian/maintainer-scripts/"
assets = [
    ["target/release/ccbridged",                   "usr/bin/",                                        "755"],
    ["../../target/release/ccbridge-hook",          "usr/bin/",                                        "755"],
    ["../../contrib/systemd/ccbridge.service",      "usr/lib/systemd/user/ccbridge.service",           "644"],
    ["../../README.md",                             "usr/share/doc/ccbridge/README.md",                "644"],
    ["../../docs/control-protocol.md",              "usr/share/doc/ccbridge/control-protocol.md",      "644"],
    ["../../docs/example-config.toml",              "usr/share/doc/ccbridge/example-config.toml",      "644"],
    ["../../LICENSE",                               "usr/share/doc/ccbridge/copyright",                "644"],
]
