[package]
name = "ccbridged"
description = "Claude Code aggregator bridge daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "ccbridged"
path = "src/lib.rs"

[[bin]]
name = "ccbridged"
path = "src/main.rs"

[features]
default = ["ble"]
ble = ["dep:bluer", "dep:uuid", "dep:futures-util"]

[dependencies]
ccbridge-proto = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-lite = "2"
notify = "6"
globset = "0.4"
arc-swap = "1"
time = { version = "0.3", features = ["local-offset", "macros", "formatting"] }
sd-notify = "0.4"
toml = "0.8"
lru = "0.18"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
bluer = { version = "0.17", default-features = false, features = ["bluetoothd"], optional = true }
uuid = { version = "1", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
name = "ccbridge"
maintainer = "Marko Bocevski <marko.bocevski@gmail.com>"
copyright = "2026, Marko Bocevski <marko.bocevski@gmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """
ccbridge aggregates state across all running Claude Code sessions on this
machine and surfaces approval prompts through your freedesktop notification
daemon and a bidirectional control socket."""
section = "utils"
priority = "optional"
depends = "$auto"
suggests = "dunst | mako-notifier | swaync | notification-daemon"
maintainer-scripts = "../../debian/maintainer-scripts/"
assets = [
    ["../../target/release/ccbridged",              "usr/bin/",                                        "755"],
    ["../../target/release/ccbridge-hook",          "usr/bin/",                                        "755"],
    ["../../contrib/systemd/ccbridge.service",      "usr/lib/systemd/user/ccbridge.service",           "644"],
    ["../../README.md",                             "usr/share/doc/ccbridge/README.md",                "644"],
    ["../../docs/example-config.toml",              "usr/share/doc/ccbridge/example-config.toml",      "644"],
    ["../../LICENSE",                               "usr/share/doc/ccbridge/copyright",                "644"],
]
